edited landing page and steming page

--- a/css/main.css
+++ b/css/main.css
@@ -332,7 +332,7 @@ nav{
 }
 .steming-bottom{
     height: 400px;
-    background-image: url(../img/stemhub3a.jpg);
+    background-image: url(../img/stemback.jpg);
     background-position: center;
     background-size: cover;
 }
