--- a/mde/style.css
+++ b/mde/style.css
@@ -16,7 +16,7 @@
     padding: 100px 0;
 }
 .distance{
-    background-image: url(../img/donate.jpg);
+    background-image: url(../img/svol.jpg);
     background-position: center left;
     background-color: #4abdac;
     text-align: left;
