--- a/views/home.html
+++ b/views/home.html
@@ -132,12 +132,11 @@
                 <div class="row align-items-center">
                     <div class="col-sm-1 order-sm-1"></div>
                     <div class="col-sm-5 order-sm-10">
-                        <img src="../img/donate.jpg" class="img-fluid" alt="">
+                        <img src="../img/svol.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-sm-4 order-sm-2">
                         <p class="stemHeader">State-of-the-art 3D Printing Solution Centre</p>
-                        <p>The Division of Samuel, Son & Co where I work (Burloak Technologies) is investing $104 million to build a state of the art
-                        3D printing solution centre in Ontario. The Government of Canada and Ontario Government provided part of the funding</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore qui at veritatis iure? Debitis fuga esse explicabo, obcaecati, doloremque totam error, similique eos illum perspiciatis reiciendis cum nesciunt. Ad, hic.</p>
                         <a class="stem-button" role="button" href="event">See all events</a>
                     </div>
                     <div class="col-sm-2 order-sm-12"></div>
@@ -152,11 +151,7 @@
                     </div>
                     <div class="col-sm-4 order-sm-2">
                         <p class="stemHeader">We had our 3D Printing workshop</p>
-                        <p>We had the finale of our 3 weekends 3D Printing workshop on Saturday. We were very delighted t have Hon. Jean Augustine
-                            come out to encourage us.
-                            <br>
-                            <br> Thank you to everyone who came to participate over this 3 weekends! Thank you to @jeanaugustinecentre for having
-                            us and to our mentor @ms_mignon and our other volunteers who came out to support us.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi quod nesciunt dolor ab maiores molestiae ipsa, delectus, laborum saepe molestias eaque id deleniti. Veniam, nam impedit perspiciatis similique aut fuga?</p>
                             <a class="stem-button" role="button" href="event">See all events</a>
                     </div>
                     <div class="col-sm-2 order-sm-12"></div>
@@ -167,15 +162,11 @@
                 <div class="row align-items-center">
                     <div class="col-sm-1 order-sm-1"></div>
                     <div class="col-sm-5 order-sm-10">
-                        <img src="../img/stemhub10a.jpg" class="img-fluid" alt="">
+                        <img src="../img/stemhub17a.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-sm-4 order-sm-2">
-                        <p class="stemHeader">We had our 3D Printing workshop</p>
-                        <p>We had the finale of our 3 weekends 3D Printing workshop on Saturday. We were very delighted t have Hon. Jean Augustine
-                            come out to encourage us.
-                            <br>
-                            <br> Thank you to everyone who came to participate over this 3 weekends! Thank you to @jeanaugustinecentre for having
-                            us and to our mentor @ms_mignon and our other volunteers who came out to support us.</p>
+                        <p class="stemHeader">Another STEMHub workshop</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet illo perspiciatis magnam! Id numquam ut maiores necessitatibus quos hic ipsam saepe recusandae? Adipisci, qui dolore nemo consequuntur delectus repudiandae debitis!</p>
                             <a class="stem-button" role="button" href="event">See all events</a>
                     </div>
                     <div class="col-sm-2 order-sm-12"></div>
