--- a/views/steming.html
+++ b/views/steming.html
@@ -13,7 +13,7 @@
     <div class="row">
         <div class="col-sm-1"></div>
         <div class="col-sm-6">
-            <h3 class="green-header">STEMing delivers creativity</h3>
+            <h3 class="green-header">STEMing</h3>
             <p>STEMing delivers creative, free, hands-on and minds-on STEM workshops on various STEM topics to students (Grade 2 - 12) in visible-minority-dominated, female-dominated and underserved communities across the Greater Toronto Area (GTA), Ontario, Canada.</p>
             <p>Just like scientists, we believe young people can imagine, question, design, create, test, improve and fall in love with STEM in a fun-filled learning environment under the guidance of skilled instructors.</p>
             <p>Our workshops are tailored to encourage curiosity about STEM, help young people develop useful skills and the right attitude towards STEM careers, and provide guidance to help young people understand how STEM shapes our daily lives.</p>
@@ -55,7 +55,7 @@
         </div>
         <div class="col-sm-5">
             <h3 class="green-header">Request a STEMing workshop</h3>
-            <p>To request for a STEMing workshop, please fill out the form. Upon receipt of your STEM cell request, a follow-up email will be sent to you within 48 hours.</p>
+            <p>To request for a STEMing workshop, please fill out the form <a href="https://docs.google.com/forms/d/e/1FAIpQLSeGNM47WJ60jYLMbsbB3pUVQYrDm97LHOPaKjwGxJssUI_Rng/viewform" target="_blank">here</a>. Upon receipt of your STEM cell request, a follow-up email will be sent to you within 48 hours.</p>
             <p>For new and non-recurring workshops, kindly send your request one month in advance of the proposed workshop date.</p>
             <p>All requests are appreciated and will be acknowledged; however workshops are hosted on a first-come first-served basis and subjected to volunteers availability.</p>
         </div>
