--- a/views/home.html
+++ b/views/home.html
@@ -102,13 +102,24 @@
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--1-col"></div>
             <div class="mdl-cell mdl-cell--5-col">
-                <h3 class="stemHeader">STEMSpires / STEMScholars Blog</h3>
-                <p>Top STEM stories and updates</p>
+                <h3 class="stemHeader">STEMSpires</h3>
+                <p>TOP STEM STORIES AND UPDATES.</p>
                 <p>Insights, advice and latest happenings in the world of STEM delivered by STEMHub's team, partners, and supporters from across the world.</p>
                 <p>We love contributors!</p>
                 <p>If you have written an article about STEM that you would like us to share with our audience or you want to be a part of our content team, send an email to our content team lead Adebisi Adewusi at <a href="mailto:adebisi.adewusi@stemhubfoundation.com">adebisi.adewusi@stemhubfoundation.com</a>.</p>
                 <p>See our content process below.</p>
                 <a href="http://stemhubfoundation.com/blog" target="_blank" role="button" class="stem-button">Read STEM posts</a>
+            </div>
+            <div class="mdl-cell mdl-cell--6-col"></div>
+        </div>
+        <div class="spacer75"></div>
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--1-col"></div>
+            <div class="mdl-cell mdl-cell--5-col">
+                <h3 class="stemHeader">STEMScholar / STEMSocial</h3>
+                <p>LIMIT YOUR TUITION, NOT YOUR EDUCATION.</p>
+                <p>Get updates on scholarships, fellowships and research grants from our amazing scholarship and grant team headed by Brenda McWilson.</p>
+                <a href="stemscholar" class="stem-button">Find out more</a>
             </div>
             <div class="mdl-cell mdl-cell--6-col"></div>
         </div>
