--- a/views/steming.html
+++ b/views/steming.html
@@ -72,30 +72,30 @@
                     <tr>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/piston.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Mechanical Engineering, Automatic & Robotics</p>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/3d-printer.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Specialized 3D Design & 3D Printing Workshops</p>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/ensamble-of-circles.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Mathematics, Mathematical Modelling & Applied Physics</p>
                                 </div>
                             </div>
@@ -104,30 +104,30 @@
                     <tr>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/test.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Chemistry, Environmental Sciences & Life Sciences</p>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/neptune.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Astronomy & Astro Physics</p>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/file.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Subjects can also be tailored based on your request</p>
                                 </div>
                             </div>
@@ -136,20 +136,20 @@
                     <tr>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/university.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Local universities vists</p>
                                 </div>
                             </div>
                         </td>
                         <td>
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-sm-3">
                                     <img src="../img/itinerary.png" class="img-fluid" alt="">
                                 </div>
-                                <div class="col-9">
+                                <div class="col-sm-9">
                                     <p>Industrial trips / Company tours</p>
                                 </div>
                             </div>
