--- a/views/home.html
+++ b/views/home.html
@@ -57,7 +57,7 @@
             </div>
             <div class="mdl-cell mdl-cell--5-col mdl-cell--8-col-tablet mdl-cell--order-2-desktop">
                 <h3 class="stemHeader">STEMing</h3>
-                <p>Hands-On STEM Workshop </p>
+                <p>HANDS-ON STEM WORKSHOP</p>
                 <p>STEMing delivers creative, free, hands-on and minds-on STEM workshops on various STEM topics to students (Grade 2 - 12) in visible-minority-dominated, female-dominated and underserved communities across the Greater Toronto Area (GTA), Ontario, Canada. <a href="steming">Learn more</a></p>
                 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGNM47WJ60jYLMbsbB3pUVQYrDm97LHOPaKjwGxJssUI_Rng/viewform" target="_blank" class="stem-button">Book a Stem Cell Workshop</a></p>
                 <p><a href="https://goo.gl/forms/H7yF11EKlhO7xqlC2" target="_blank" class="stem-button-2">Volunteer as STEM Facilitator</a></p>
