--- a/views/programs.html
+++ b/views/programs.html
@@ -13,7 +13,7 @@
         <div class="col-sm-6 order-sm-last"></div>
         <div class="col-sm-6 order-sm-first">
             <h3 class="stemHeader">STEMing</h3>
-            <p>Hands-On STEM Workshop</p>
+            <p>HANDS-ON STEM WORKSHOP</p>
             <p>STEMing delivers creative, free, hands-on and minds-on STEM workshops on various STEM topics to students (Grade
                 2 - 12) in visible-minority-dominated, female-dominated and underserved communities across the Greater Toronto
                 Area (GTA), Ontario, Canada. <a href="steming">Learn more</a>
@@ -30,7 +30,7 @@
     <div class="row align-items-center">
         <div class="col-sm-6">
             <h3 class="stemHeader">STEMStars</h3>
-            <p>One-To-One Mentorship Program</p>
+            <p>ONE-TO-ONE MENTORSHIP PROGRAM</p>
             <p>STEMStars is a mentee-driven one-to-one mentoring program that strategically pairs mentees and mentors based on
                 career progression needs, and long term career goals.
                 <br>
@@ -52,11 +52,27 @@
 
     <div class="row">
         <div class="col-sm-5">
-            <h3 class="stemHeader">STEMSpires / STEMScholars Blog</h3>
-            <p>Top STEM stories and updates</p>
+            <h3 class="stemHeader">STEMSpires</h3>
+            <p>TOP STEM STORIES AND UPDATES</p>
             <p>Here, its all about and stories and program updates
                 <br> from our team, partners and supporters.</p>
             <a href="#" role="button" class="stem-button">STEMS Blog
+                <i class="fa fa-chevron-right"></i>
+            </a>
+        </div>
+        <div class="col-sm-7"></div>
+    </div>
+    <br>
+    <hr>
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div class="col-sm-5">
+            <h3 class="stemHeader">STEMScholars / STEMSocial</h3>
+            <p>Get information about funding opportunities or need help to achieve your dream to get back to school on scholarship?</p>
+            <p>We come from various backgrounds but share the same goal:<br>
+                To revolutionize how STEM education is perceived by building an online community to engage the millenial audience about STEM opportunities.</p>
+            <a href="stemscholar" role="button" class="stem-button">Find out more
                 <i class="fa fa-chevron-right"></i>
             </a>
         </div>
