--- a/views/stemscholar.html
+++ b/views/stemscholar.html
@@ -48,10 +48,10 @@
             <div class="row align-items-center">
                 <div class="col-sm-6">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-4">
                             <img src="../img/brenda2.jpg" class="img-fluid rounded-circle" alt="">
                         </div>
-                        <div class="col-6">
+                        <div class="col-8">
                             <h5><strong>Brenda McWilson, BSc.</strong></h5>
                             <p class="green-header">STEMScholars Manager</p>
                         </div>
@@ -59,12 +59,12 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-4">
                             <img src="../img/mariam.jpg" class="img-fluid rounded-circle" alt="">
                         </div>
-                        <div class="col-6">
+                        <div class="col-8">
                             <h5><strong>Mariam Barry, BSc.</strong></h5>
-                            <p class="green-header">STEMStars Manager</p>
+                            <p class="green-header">STEMSocial Manager</p>
                         </div>
                     </div>
                 </div>
