--- a/views/stemstars.html
+++ b/views/stemstars.html
@@ -10,20 +10,25 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid stemstars-top">
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-6">
             <div class="spacer"></div>
-            <h3 class="green-header">STEMStars is a mentee-driven program</h3>
+            <h3>STEMStars is a mentee-driven program</h3>
             <p>STEMStars is a mentee - driven one-to-one mentoring program that strategically pairs mentees with mentors based on career needs and goals.</p>
             <p>Our mentors voluntarily serve as role models, provides skill development advice, risk management, career guidance, share their knowledge, experience, and connection to help our mentees sharpen their skills, get creative and achieve their career goals.</p>
             <br><br>
-            <h3 class="green-header">STEMStars Vision</h3>
+            <h3>STEMStars Vision</h3>
             <p>Engineers thriving in their careers and leading the profession, unhindered by the barriers that propagate systemic under-representation
             of persons with minority backgrounds in engineering fields and leadership roles.</p>
+            <div class="spacer"></div>
         </div>
         <div class="col-sm-4"></div>
     </div>
+</div>
+
+<div class="container">
 
     <div class="spacer"></div>
 
@@ -90,10 +95,10 @@
             <div class="row align-items-center">
                 <div class="col-sm-6">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-4">
                             <img src="../img/msc.jpg" class="img-fluid rounded-circle" alt="">
                         </div>
-                        <div class="col-6">
+                        <div class="col-8">
                             <h5><strong>Minha R. Ha MSc.</strong></h5>
                             <p class="green-header">STEMStars Manager</p>
                         </div>
@@ -101,10 +106,10 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="row align-items-center">
-                        <div class="col-6">
+                        <div class="col-4">
                             <img src="../img/bsc.jpg" class="img-fluid rounded-circle" alt="">
                         </div>
-                        <div class="col-6">
+                        <div class="col-8">
                             <h5><strong>Marsha Miller BSc.</strong></h5>
                             <p class="green-header">STEMStars Manager</p>
                         </div>
