--- a/css/main.css
+++ b/css/main.css
@@ -70,7 +70,7 @@ h1, h2, h3, h4, h5, h6{
     font-family: 'Ubuntu', sans-serif;
 }
 p{
-    font-size: 16px
+    font-size: 16px;
 }
 a:hover{
     text-decoration: none;
@@ -292,6 +292,10 @@ nav{
     background-size: cover;
     background-position: top;
     color: white;
+}
+.stemstars-top{
+    background-color: #4abdac;
+    color: #fff;
 }
 .ss-work-1{
     text-align: right;
