--- a/views/donate.html
+++ b/views/donate.html
@@ -22,7 +22,7 @@
         <div class="col-sm-2"></div>
 
         <div class="col-sm-6">
-            <img src="../img/donate.jpg" class="img-fluid" alt="">
+            <img src="../img/svol.jpg" class="img-fluid" alt="">
             <h3 class="stemHeader">Donating today helps us even more; to reach more kids and youth.</h3>
             <p>Your donation goes a long way to helping run our STEM programs in the Greater Toronto Area (GTA), Ontario, Canada and events worldwide.</p>
         </div>
