--- a/views/contact.html
+++ b/views/contact.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div>
-                    <button type="submit" class="btn btn-info">Send</button>
+                    <button type="submit" style="background-color: #009fe3 !important;" class="btn btn-info">Send</button>
                 </div>
             </form>
         </div>
