--- a/views/event.html
+++ b/views/event.html
@@ -61,7 +61,7 @@
         <div class="col-sm-4">
             <h4>Request a Workshop</h4>
             <p>Hey you can request for a workshop and we will gladly come over to impact on young minds</p>
-            <a href="#" class="transparent-button" role="button">Fill Form</a>
+            <a href="https://docs.google.com/forms/d/1taAE4w57DL_bmyvOkPSyYeOE5xCUGBjYcW782sf90ko/edit?ts=5afebcfb" target="_blank" class="transparent-button" role="button">Fill Form</a>
         </div>
         <div class="col-sm-4"></div>
     </div>
