--- a/views/home.html
+++ b/views/home.html
@@ -59,8 +59,8 @@
                 <h3 class="stemHeader">STEMing</h3>
                 <p>HANDS-ON STEM WORKSHOP</p>
                 <p>STEMing delivers creative, free, hands-on and minds-on STEM workshops on various STEM topics to students (Grade 2 - 12) in visible-minority-dominated, female-dominated and underserved communities across the Greater Toronto Area (GTA), Ontario, Canada. <a href="steming">Learn more</a></p>
-                <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGNM47WJ60jYLMbsbB3pUVQYrDm97LHOPaKjwGxJssUI_Rng/viewform" target="_blank" class="stem-button">Book a Stem Cell Workshop</a></p>
-                <p><a href="https://goo.gl/forms/H7yF11EKlhO7xqlC2" target="_blank" class="stem-button-2">Volunteer as STEM Facilitator</a></p>
+                <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGNM47WJ60jYLMbsbB3pUVQYrDm97LHOPaKjwGxJssUI_Rng/viewform" target="_blank" class="stem-button">Book a STEM Cell Workshop</a></p>
+                <p><a href="https://goo.gl/forms/H7yF11EKlhO7xqlC2" target="_blank" class="stem-button-2">Volunteer as a STEM Facilitator</a></p>
             </div>
             <div class="mdl-cell mdl-cell--1-col"></div>
         </div>
@@ -89,7 +89,7 @@
             <div class="mdl-cell mdl-cell--1-col"></div>
         </div>
         <div class="spacer100"></div>
-        <div class="mdl-grid distance">
+        <!-- <div class="mdl-grid distance">
             <div class="mdl-cell mdl-cell--1-col"></div>
             <div class="mdl-cell mdl-cell--6-col">
                 <h3>Choosing a career in STEM</h3>
@@ -97,7 +97,7 @@
                 <a href="http://stemhubfoundation.com/blog" class="transparent-button" target="_blank">Contribute</a>
             </div>
             <div class="mdl-cell mdl-cell--5-col"></div>
-        </div>
+        </div> -->
         <div class="spacer75"></div>
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--1-col"></div>
@@ -105,13 +105,23 @@
                 <h3 class="stemHeader">STEMSpires</h3>
                 <p>TOP STEM STORIES AND UPDATES.</p>
                 <p>Insights, advice and latest happenings in the world of STEM delivered by STEMHub's team, partners, and supporters from across the world.</p>
-                <p>We love contributors!</p>
-                <p>If you have written an article about STEM that you would like us to share with our audience or you want to be a part of our content team, send an email to our content team lead Adebisi Adewusi at <a href="mailto:adebisi.adewusi@stemhubfoundation.com">adebisi.adewusi@stemhubfoundation.com</a>.</p>
-                <p>See our content process below.</p>
+                
                 <a href="http://stemhubfoundation.com/blog" target="_blank" role="button" class="stem-button">Read STEM posts</a>
             </div>
             <div class="mdl-cell mdl-cell--6-col"></div>
         </div>
+        <br>
+        <hr>
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--1-col"></div>
+            <div class="mdl-cell mdl-cell--5-col">
+                <h4>We love Contributors!</h4>
+                <em><p>If you have written an article about STEM that you would like us to share with our audience or you want to be a part of our content team, send an email to our content team lead Adebisi Adewusi at <a href="mailto:adebisi.adewusi@stemhubfoundation.com">adebisi.adewusi@stemhubfoundation.com</a>.</p></em>
+            </div>
+            <div class="mdl-cell mdl-cell--6-col"></div>
+        </div>
+        <hr>
+
         <div class="spacer75"></div>
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--1-col"></div>
