--- a/views/stemstars.html
+++ b/views/stemstars.html
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 margin-up">
                     <div class="row align-items-center">
                         <div class="col-4">
                             <img src="../img/bsc.jpg" class="img-fluid rounded-circle" alt="">
