--- a/views/volunteer.html
+++ b/views/volunteer.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-6">
-                <h3>Volunteer with Us</h3>
+                <h3>Work with Us</h3>
                 <p>To ensure STEMHub Foundation represents the views, experience and opinions of young people across the world, we're constantly looking for volunteers with the passion to build the community we live in.<br>
                     Let your impact be felt around the world through your contributions.</p>
                 <div>
