--- a/css/main.css
+++ b/css/main.css
@@ -303,7 +303,7 @@ nav{
 
 /* Contact */
 .amazing-impact{
-    background-image: url(../img/STEM-1_7.jpg);
+    background-image: url(../img/bg1.jpg);
     background-size: cover;
     background-position: center;
     padding-top: 200px;
