--- a/views/home.html
+++ b/views/home.html
@@ -117,6 +117,7 @@
             <div class="mdl-cell mdl-cell--5-col">
                 <h4>We love Contributors!</h4>
                 <em><p>If you have written an article about STEM that you would like us to share with our audience or you want to be a part of our content team, send an email to our content team lead Adebisi Adewusi at <a href="mailto:adebisi.adewusi@stemhubfoundation.com">adebisi.adewusi@stemhubfoundation.com</a>.</p></em>
+                <a href="contributor" class="stem-button">Contribute</a>
             </div>
             <div class="mdl-cell mdl-cell--6-col"></div>
         </div>
