--- a/views/stemstars.html
+++ b/views/stemstars.html
@@ -34,7 +34,7 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <img src="../img/illustrate.jpg" class="img-fluid" alt="illustrated diagram">
+            <img src="../img/stemstars-illustration.jpg" class="img-fluid" alt="illustrated diagram">
         </div>
     </div>
 
