--- a/views/about.html
+++ b/views/about.html
@@ -13,8 +13,7 @@
     <div class="row">
         <div class="col-sm-8">
             <h3 class="green-header">Our Vision</h3>
-            <p>To ensure under-represented persons thrive in STEM careers and take up leadership roles.<br>
-                To help under-represented persons with minority backgrounds breakdown barriers that promote systemic under-representation.</p>
+            <p>Individuals thriving in their careers and leading their professions, unhindered by the barriers that propagate systemic under-representation of persons with minority backgrounds in STEM careers and leadership roles.</p>
         </div>
         <div class="col-sm-4"></div>
     </div>
@@ -22,8 +21,8 @@
     <div class="row">
         <div class="col-sm-8" id="mission">
             <h3 class="green-header">Our Mission</h3>
-            <p>Engineers thriving in their careers and leading the profession, unhindered by the barriers that propagate systemic
-                under-representation of persons with minority backgrounds in engineering fields and leadership roles.</p>
+            <p>To provide STEM education through free, creative and hands-on skills development programs to encourage females, visible minorities and undeserved youths to pursue science, technology, engineering and mathematics (STEM) careers.</p>
+            <p>To provide one-to-one mentoring to early career professionals and university students from under-represented groups to help foster skill development, career guidance, risk management, feedback provision and inspire champions.</p>
         </div>
         <div class="col-sm-4"></div>
     </div>
