--- a/views/contributor.html
+++ b/views/contributor.html
@@ -25,8 +25,35 @@
 
 <div class="container">
     <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+            <h3 class="green-header" style="text-align: center;">Meet the Content Team Leader</h3>
+            <br><br>
+            <div class="row align-items-center">
+                <div class="col-sm-12 margin-up">
+                    <div class="row align-items-center">
+                        <div class="col-4">
+                            <img src="../img/adewusi.jpg" class="img-fluid rounded-circle" alt="">
+                        </div>
+                        <div class="col-8">
+                            <h5><strong>Adebisi Adewusi</strong></h5>
+                            <p class="green-header">Content Team Leader</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-4"></div>
+    </div>
+    <br><br><br>
+</div>
+
+<div class="spacer75"></div>
+
+<div class="container">
+    <div class="row">
         <div class="col-12">
-            <img src="../img/contrib-process.jpg" alt="" class="img-fluid">
+            <img src="../img/contrib-process.jpg" alt="" class="img-fluid mx-auto d-block">
         </div>
     </div>
     <div class="spacer75"></div>
