--- a/views/home.html
+++ b/views/home.html
@@ -41,7 +41,7 @@
         <div class="mdl-cell mdl-cell--6-col">
             <h4>STEMHub Foundation is on a Mission</h4>
             <p>To provide STEM education through free, creative and hands-on skills development programs to encourage females, visible minorities and undeserved youths to pursue science, technology, engineering and mathematics (STEM) careers.</p>
-            <p>Provision of a one-to-one mentoring program to foster skill development, career guidance, risk management and feedback provision, to females and visible minority STEM professional and entrepreneurs.</p>
+            <p>To provide one-to-one mentoring to early career professionals and university students from under-represented groups to help foster skill development, career guidance, risk management, feedback provision and inspire champions.</p>
         </div>
         <div class="mdl-cell mdl-cell--4-col"></div>
     </div>
@@ -56,7 +56,7 @@
                 <img class="img-fluid" src="img/steming.jpg" alt="">
             </div>
             <div class="mdl-cell mdl-cell--5-col mdl-cell--8-col-tablet mdl-cell--order-2-desktop">
-                <h3 class="stemHeader">STEMing</h3>
+                <h3 class="stemHeader"><a href="steming">STEMing</a></h3>
                 <p>HANDS-ON STEM WORKSHOP</p>
                 <p>STEMing delivers creative, free, hands-on and minds-on STEM workshops on various STEM topics to students (Grade 2 - 12) in visible-minority-dominated, female-dominated and underserved communities across the Greater Toronto Area (GTA), Ontario, Canada. <a href="steming">Learn more</a></p>
                 <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSeGNM47WJ60jYLMbsbB3pUVQYrDm97LHOPaKjwGxJssUI_Rng/viewform" target="_blank" class="stem-button">Book a STEM Cell Workshop</a></p>
@@ -71,7 +71,7 @@
                 <img src="img/s16.jpg" alt="" class="img-fluid">
             </div>
             <div class="mdl-cell mdl-cell--5-col mdl-cell--8-col-tablet">
-                <h3 class="stemHeader">STEMStars</h3>
+                <h3 class="stemHeader"><a href="stemstars">STEMStars</a></h3>
                 <p>ONE-TO-ONE MENTORSHIP PROGRAM</p>
                 <p>STEMStars is a mentee-driven one-to-one mentoring program that strategically pairs mentees and mentors based on career progression
                 needs, and long term career goals.
@@ -89,23 +89,21 @@
             <div class="mdl-cell mdl-cell--1-col"></div>
         </div>
         <div class="spacer100"></div>
-        <!-- <div class="mdl-grid distance">
+        <div class="mdl-grid distance">
             <div class="mdl-cell mdl-cell--1-col"></div>
             <div class="mdl-cell mdl-cell--6-col">
-                <h3>Choosing a career in STEM</h3>
                 <br>
-                <a href="http://stemhubfoundation.com/blog" class="transparent-button" target="_blank">Contribute</a>
             </div>
             <div class="mdl-cell mdl-cell--5-col"></div>
-        </div> -->
+        </div>
         <div class="spacer75"></div>
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--1-col"></div>
             <div class="mdl-cell mdl-cell--5-col">
-                <h3 class="stemHeader">STEMSpires</h3>
+                <h3 class="stemHeader"><a href="http://stemhubfoundation.com/blog">STEMSpires</a></h3>
                 <p>TOP STEM STORIES AND UPDATES.</p>
                 <p>Insights, advice and latest happenings in the world of STEM delivered by STEMHub's team, partners, and supporters from across the world.</p>
-                
+
                 <a href="http://stemhubfoundation.com/blog" target="_blank" role="button" class="stem-button">Read STEM posts</a>
             </div>
             <div class="mdl-cell mdl-cell--6-col"></div>
@@ -127,7 +125,7 @@
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--1-col"></div>
             <div class="mdl-cell mdl-cell--5-col">
-                <h3 class="stemHeader">STEMScholar / STEMSocial</h3>
+                <h3 class="stemHeader"><a href="stemscholar">STEMScholar / STEMSocial</a></h3>
                 <p>LIMIT YOUR TUITION, NOT YOUR EDUCATION.</p>
                 <p>Get updates on scholarships, fellowships and research grants from our amazing scholarship and grant team headed by Brenda McWilson.</p>
                 <a href="stemscholar" class="stem-button">Find out more</a>
@@ -164,7 +162,7 @@
                     <div class="col-sm-2 order-sm-12"></div>
                 </div>
             </div>
-    
+
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-sm-1 order-sm-1"></div>
@@ -179,7 +177,7 @@
                     <div class="col-sm-2 order-sm-12"></div>
                 </div>
             </div>
-    
+
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-sm-1 order-sm-1"></div>
@@ -264,7 +262,7 @@
                         slidesToScroll: 1
                     }
                     }
-                   
+
                 ]
             });
 
@@ -295,7 +293,7 @@
                         slidesToScroll: 1
                     }
                     }
-                    
+
                 ]
             });
         });
