--- a/views/volunteer.html
+++ b/views/volunteer.html
@@ -24,16 +24,16 @@
                     <p><i class="fa fa-check fa-lg"></i> Project / Program Managers</p>
                 </div>
                 <br>
-                <p>Fill the request form to volunteer with us <a href="#">here</a></p>
+                <p>Fill the request form to volunteer with us <a href="https://docs.google.com/forms/d/e/1FAIpQLSegkFSSbkGn_bY16SY0u9VL9MPvePNqxZUiWWYt0f5jK_qslg/viewform" target="_blank">here</a></p>
                 <br>
-                <a class="green-button" href="#" role="button">Volunteer</a>
+                <a class="green-button" href="https://docs.google.com/forms/d/e/1FAIpQLSegkFSSbkGn_bY16SY0u9VL9MPvePNqxZUiWWYt0f5jK_qslg/viewform" role="button" target="_blank">Volunteer</a>
                 <br>
                 <br>
                 <hr>
                 <br>
                 <h3>Partner with Us</h3>
-                <p>We partner with local organizations, community centers, community festivals, and churches to bring STEMing to communities around Ontario. Please fill out the request for partnership form <a href="#">here</a>. We are also open to partnerships with organizations in developing countries around the world.</p>
-                <a class="green-button" href="#" role="button">Partner Now</a>
+                <p>We partner with local organizations, community centers, community festivals, and churches to bring STEMing to communities around Ontario. Please fill out the request for partnership form <a href="https://docs.google.com/forms/d/e/1FAIpQLSfxlWx4WCNtljJH285O9HNm-yfUxQtiBCTG8taLwJwBzukrGg/viewform" target="_blank">here</a>. We are also open to partnerships with organizations in developing countries around the world.</p>
+                <a class="green-button" href="https://docs.google.com/forms/d/e/1FAIpQLSfxlWx4WCNtljJH285O9HNm-yfUxQtiBCTG8taLwJwBzukrGg/viewform" target="_blank" role="button">Partner Now</a>
             </div>
             <div class="col-sm-4"></div>
         </div>
